--- a/public/assets/css/messages/index.css
+++ b/public/assets/css/messages/index.css
@@ -1,19 +1,3 @@
-
-/* header */
-.header--bg{
-    background-color: lightgray;
-}
-/* --------- */
-
-/* nav */
-.nav-icon-size{
-    height: 80px;
-    width: 80px;
-    min-width: 80px;
-    max-width: 80px;
-}
-/* --------- */
-
 /* common */
 .btn-icon,
 .user-pic{
@@ -27,6 +11,13 @@
 .msg-reply-bg{
     background-color: #eeeeee;
 }
+
+.message-link{
+    color: black;
+    color: #308fb4;
+    font-weight: bold;
+    text-decoration: none;
+}
 /* --------- */
 
 /* FOR TEXT*/
@@ -35,8 +26,4 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
-/* --------- */
-
-/* ################################################## */
-/* section2*/
 /* --------- */
